<resources>
    <string name="app_name">GVBaseAdaptador</string>
    <string name="tituloapp">Agenda</string>
    <string name="hnombre">Ingrese su nombre</string>
    <string name="hedad">Ingrese su edad</string>
    <string name="hSexo">Ingrese su Sexo</string>
    <string name="vGrabar">Gravar</string>
    <string name="dNombre">Nombre</string>
    <string name="dEdad">Edad</string>
    <string name="dlblNombre">Nombre</string>
    <string name="lblSexo">Sexo</string>
    <string name="editEdad">Edad</string>
    <string name="editSexo">Sexo</string>
    <string name="editName">Nombre</string>
</resources>